Tabs - prevent container from collapsing while contents are loading
Former-commit-id: dae32c74228d3f26c9fa55b73af4989019834e31

--- a/components/tabs/tabs.scss
+++ b/components/tabs/tabs.scss
@@ -7,6 +7,10 @@
   white-space: nowrap;
 }
 
+.ring-tabs__container {
+  min-height: $ring-unit * 2;
+}
+
 .ring-tabs__btn {
   display: inline-block;
   box-sizing: border-box;
